	Added a smartfilter command that creates a filter
	        based on the current message and returns the name
		of the filter.
	Added --smart-filter and --smart-filter-instance options 
	        to the next and prev commands.
	Added M-C-n and M-C-p keybindings to "move to next message 
	        matching current" and "move to previous message 
		matching current"
	
1.2.0-pre-erikdevel-17
	Integrated change to fix problem with popup blinking on new zephyrs.
	C-l and resizes will now refresh an open viewwin (eg, help).
	Updated doc/code.txt to include info about filters, commands,
	        contexts, and keybindings.
	Ooops.  "delete view" had accidentally been misbound to M-d.
	        Switched the binding back to M-D.
	Exec commands cleaned up to not have buffer-size limitations
	        and to not mess up spaces.  exec also returns a string
		of the output now.
	
1.2.0-pre-erikdevel-16
	Integrated changes from 1.1.3, and added docs for "zlocate -d"
		and new show commands.
	Show with arguments produces help on show.
	Fix a bug in readconfig caught by efence (where we'd try to read before 
	        the beginning of a string if it was empty).
	
1.1.2-erikdevel-15
        The perl command doesn't do makemsg directly, but instead
	     returns the string and it will get printed if it 
	     was run interactively.

1.1.2-erikdevel-14
	*** NOTE: I probably missed some things here...
	New framework for command handling.
	New framework for keymap handling.
	Added commands for everything that is bound 
	     to a key (do 'show commands' to get the full list).
	Added 'multi' and '(' commands to allow multiple commands
	     to be specified on a line.		     
	Added user keybindings with bindkey command.
	Added command aliases (eg, "alias foo bar").
	Added undelete command that parallels the delete command.
	Added additional options to delete command.
	The reply command now takes arguments.
	Added 'edit:insert-text' command.
	Added 'show zpunts' to show active punt filters.