@@ -28,6 +28,12 @@ $Id$
 	Added M-C-n and M-C-p keybindings to "move to next message 
 	        matching current" and "move to previous message 
 		matching current"
+	Added variables edit:maxfillcols and edit:maxwrapcols which 
+	        will limit how wide editing paragraphs may get before
+		they get wrapped.  Default is 70 columns each.
+	Added smartzpunt command with key binding of "C-x k".
+	        This starts a zpunt command filled in with 
+		the proposed zpunt.
 	
 1.2.0-pre-erikdevel-17
 	Integrated change to fix problem with popup blinking on new zephyrs.
